# scalable-starter

./: .dockerignore  .env.example  .gitignore  .npmrc  .prettierignore  .trivyignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  lefthook.yml  package.json  playwright.config.ts  pnpm-lock.yaml  turbo.json
.cursor/rules/: system-design.mdc
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  docker.yml  secret-scan.yml
apps/api/: README.md  alembic.ini  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: exceptions.py  main.py
apps/api/app/api/: errors.py
apps/api/app/api/v1/: deps.py  router.py
apps/api/app/api/v1/routes/: health.py  items.py
apps/api/app/cache/: aside.py  redis.py
apps/api/app/core/: config.py  http_client.py  lifespan.py  logging.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/db/models/: __init__.py  item.py
apps/api/app/domain/: item.py
apps/api/app/middleware/: request_id.py
apps/api/app/observability/: metrics.py  tracing.py
apps/api/app/repositories/: base.py  item.py
apps/api/app/schemas/: common.py  item.py
apps/api/app/services/: item.py
apps/api/app/workers/: queue.py  worker.py
apps/api/scripts/: seed.py
apps/api/tests/: conftest.py  test_cache.py  test_health.py  test_http_client.py  test_items.py  test_observability.py  test_security.py  test_service.py  test_worker.py
apps/web/: .eslintrc.note.md  README.md  eslint.config.mjs  instrumentation.ts  next.config.mjs  package.json  tsconfig.json  vitest.config.mts
docs/: IMPROVEMENTS.md  README.md
docs/adr/: 0001-record-architecture-decisions.md  0002-monorepo-pnpm-turborepo.md  0003-fastapi-backend.md  0004-nextjs-frontend.md  0005-layered-architecture.md  README.md  (+2 more)
e2e/: items.spec.ts
scripts/: delete_example.py  scaffold_feature.py
(+61 files in other folders)
